增加新的颜色

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="slateblue">#ff6a5acd</color>
     <color name="slategray">#ff708090</color>
     <color name="slategrey">#ff708090</color>
+    <color name="blue">#ff0000ff</color>
 </resources>
