可自定义边数(理论上无限大)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         NetView:overlayColor="@color/Yellow"
         NetView:textColor="@color/sienna"
         NetView:tagsize="20"
+        NetView:title_count="5"
         android:layout_width="300dp"
         android:layout_height="match_parent"/>
 </LinearLayout>
