--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -6,6 +6,7 @@
         <attr name="textColor" format="color"/>
         <attr name="overlayAlpha" format="integer"/>
         <attr name="tagsize" format="integer"/>
+        <attr name="title_count" format="integer"/>
     </declare-styleable>
 
 </resources>
