--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:NetView="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -10,11 +10,10 @@
 
     <view.NetView
         android:id="@+id/netView"
-        NetView:netColor="@color/colorPrimaryDark"
-        NetView:overlayColor="@color/Yellow"
-        NetView:textColor="@color/sienna"
-        NetView:tagsize="20"
-        NetView:title_count="7"
-        android:layout_width="200dp"
-        android:layout_height="300dp"/>
+        app:netColor="@color/colorPrimaryDark"
+        app:overlayColor="@color/Yellow"
+        app:textColor="@color/sienna"
+        app:tagsize="12dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
